basic electron app with connect and disconnect ui button

--- a/app/index.html
+++ b/app/index.html
@@ -11,14 +11,10 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello from Electron renderer!</title>
+    <title>data watcher</title>
   </head>
   <body>
-      <form id="oscForm">
-        <label for="ip">ip address <input type="text" id="ip" value="127.0.0.1"></label>
-        <label>Port: <input type="number" id="port" value="8000"></label><br>
-        <button type="submit">Send</button>
-      </form>
+      <button id="start">connect</button>
   </body>
   <script src="./renderer.js"></script>
 </html>
