differentiates watcher and doesn't add it to the chaos map. server also averages device data before sending it to watcher app

--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,12 @@
       content="default-src 'self'; script-src 'self'"
     />
     <title>data watcher</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <button id="start">connect</button>
+      <div class='btn-cont'>
+        <button id="start">𝔠𝔬𝔫𝔫𝔢𝔠𝔱</button>
+      </div>
   </body>
   <script src="./renderer.js"></script>
 </html>
