--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>data watcher</title>
+    <title>𝖕𝖍𝖔𝖓𝖊 𝖑𝖎𝖘𝖙𝖊𝖓𝖊𝖗</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
